minor CSS fix for comment images showing up too big

--- a/src/main/resources/static/styles/style.css
+++ b/src/main/resources/static/styles/style.css
@@ -433,6 +433,9 @@ img.profile-pic:before {
 .comment-text p:first-child {
 	margin: 0;
 }
+.comment-text img {
+    max-height: 32px;
+}
 .comment-timestamp {
 	display: inline-block;
 }
